--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cabin" />
-<link rel="stylesheet" href="styles.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Kirk!</title>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-</head>
+    <title>Boostrap Starter Page</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 <body>
-    <h1> Captain Kirk is climbing the mountain. <br>
-        Why is he climbing the mountain?
-    </h1>
 
-<div class="row">
-  <div class="button-container col-lg col-md-half col-sm">
-      <div class='button' id="b1">Hug?</div>
-      <span class = 'text'> To hug the mountain </span>
-  </div>
-  <div class="button-container col-lg col-md-half col-sm">
-      <div class='button' id='b2'>Envelop?</div>
-      <div class='text'> To envelop the mountain </div>
-  </div>
-  <div class="button-container col-lg col-md-full col-sm">
-      <div class='button' id='b3'>Love?</div>
-      <div class='text'> He wants to make love to the mountain </div>
-  </div>
-</div>
+  <h1>Hello Coursera!</h1>
 
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
